// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wip renders as expected given full props 1`] = `
<div
  class="fade className alert alert-info show"
  role="alert"
>
  <div
    class="alert-heading h4"
  >
    Pardon the mess
  </div>
  <p
    class="mb-0"
  >
    This 
    pageName
     is still a work in progress.
  </p>
</div>
`;

exports[`Wip renders as expected given minimal props 1`] = `
<div
  class="fade alert alert-info show"
  role="alert"
>
  <div
    class="alert-heading h4"
  >
    Pardon the mess
  </div>
  <p
    class="mb-0"
  >
    This 
    pageName
     is still a work in progress.
  </p>
</div>
`;
